--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+@use "assets/styles/globals/typography-global";
+@use "assets/styles/globals/colors-global";
+@use "assets/styles//globals/components-global.scss";
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
